--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,9 @@ compatibility_date = "2025-03-10"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "qrs_db"
+database_name = "qrcode_hub"
 # 注意：将下面的 id 替换为你自己拷贝的 D1 存储的 id 才能正常使用！
-database_id = "828754cd-638a-4355-94a1-2e74f5acc467"
+database_id = "4dae8f22-7dd2-42d8-be83-34073f77b367"
 
 [triggers]
 crons = ["0 2 */1 * *"]
